--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -211,3 +211,7 @@ tr.table-row:hover {
   margin-top: 20px !important;
   margin-bottom: 20px !important;
 }
+
+.small-mat-icon {
+  transform: scale(0.6);
+}
