--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -71,9 +71,6 @@
   </div>
 </div>
 <mat-menu #menu="matMenu" style="max-width: 100%;">
-  <div mat-menu-item>
-    <span routerLink="/dashboard/kanban">Nouveau tableau</span>
-  </div>
   <mat-divider></mat-divider>
   <div mat-menu-item *ngFor="let checkbox of checkboxes">
     <mat-checkbox [(ngModel)]="checkbox.value" (click)="toggleDisplay(checkbox.id);$event.stopPropagation()">
@@ -85,5 +82,15 @@
     <mat-checkbox [(ngModel)]="boxSize.value" (click)="toggleDisplaySize(boxSize.id);$event.stopPropagation()">
       {{boxSize.id}}
     </mat-checkbox>
+  </div>
+  <mat-divider></mat-divider>
+  <div mat-menu-item *ngIf="canDisplayKanban()" routerLink="/dashboard/kanban/order">
+    <span>Kanban commande</span>
+  </div>
+  <div mat-menu-item *ngIf="canDisplayKanban()" routerLink="/dashboard/kanban/quotation">
+    <span>Kanban devis</span>
+  </div>
+  <div mat-menu-item *ngIf="canDisplayKanban()" routerLink="/dashboard/kanban/provision">
+    <span>Kanban prestation</span>
   </div>
 </mat-menu>
