--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -300,10 +300,11 @@
       <span class="d-none d-sm-inline ms-2">Étape précédente</span>
     </button>
 
-
     <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center" *ngIf="canSaveQuotation()"
       (click)="saveFieldsValue()">
-      <span class="d-none d-sm-inline me-2">Étape suivante</span>
+      <span class="spinner-grow spinner-grow-sm me-2" *ngIf="isFetchingPrincing"></span><span
+        class="d-sm-inline me-2">Étape
+        suivante</span>
       <i class="ai-arrow-right"></i>
     </button>
   </div>
