--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.css
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.css
@@ -13,15 +13,6 @@
     opacity: 1;
 }
 
-.checkout-container {
-    background-color: var(--ar-gray-200);
-    padding: 4rem;
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
-    margin-top: -1rem;
-    margin-bottom: -2rem;
-}
-
 .cart-panel {
     background-color: white;
     overflow-y: auto;
@@ -36,4 +27,25 @@ button.btn-icon {
 .btn-close {
     color: var(--ar-secondary);
     z-index: 1110;
+}
+
+.background-right {
+    z-index: -1;
+    background-color: var(--ar-gray-200);
+}
+
+hr {
+    color: var(--ar-gray-500);
+}
+
+:host ::ng-deep generic-input.white-form-control .form-control {
+    color: var(--ar-gray-300);
+}
+
+:host ::ng-deep generic-input.white-form-control .form-control:focus {
+    color: var(--ar-gray-200);
+}
+
+:host ::ng-deep generic-input.white-form-control i {
+    color: var(--ar-gray-300);
 }
