--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -197,7 +197,7 @@
   --ar-border-radius-xxl: calc(var(--ar-border-radius) * 2.25);
   --ar-border-radius-2xl: var(--ar-border-radius-xxl);
   --ar-border-radius-pill: 50rem;
-  --ar-box-shadow: 0 0.4375rem 1.25rem rgba(208, 208, 196, 0.32);
+  --ar-box-shadow: 0 0.4375rem 1.25rem rgba(214, 220, 225, 0.5);
   --ar-box-shadow-sm: 0 0.375rem 0.75rem -0.125rem rgba(208, 208, 196, 0.24);
   --ar-box-shadow-lg: 0 0.5rem 1.75rem -0.125rem rgba(208, 208, 196, 0.48);
   --ar-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
@@ -3301,7 +3301,7 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-check-input:valid:checked, .form-check-input.is-valid:checked {
-  background-color: var(--ar-form-valid-color);
+  /* background-color: var(--ar-form-valid-color); */
 }
 
 .was-validated .form-check-input:valid:focus, .form-check-input.is-valid:focus {
@@ -8177,6 +8177,10 @@ textarea.form-control-lg {
 
 .start-50 {
   left: 50% !important;
+}
+
+.start-57 {
+  left: 57.5% !important;
 }
 
 .start-100 {
@@ -15763,8 +15767,8 @@ label {
 
 .was-validated .form-check-input:valid:checked,
 .form-check-input.is-valid:checked {
-  background-color: var(--ar-primary);
-  border-color: var(--ar-primary);
+  /* background-color: var(--ar-primary);
+  border-color: var(--ar-primary); */
 }
 
 .was-validated .form-check-input:invalid:checked,
