--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1647,6 +1647,13 @@
           </tr>
           <tr>
             <td>
+              <select-accounting-account-class [(model)]="constant.accountingAccountClassTiers"
+                label="Classe comptable - Tiers" [form]="constantForm" propertyName="accountingAccountClassTiers"
+                [isMandatory]="true" [isDisabled]="!editMode"></select-accounting-account-class>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-service-family [(model)]="constant.serviceFamilyImmatriculationAlAndFormality"
                 label="Famille de service - Immatriculation AL et Formalité" [form]="constantForm"
                 propertyName="serviceFamilyImmatriculationAlAndFormality" [isMandatory]="true"
